--- a/index.html
+++ b/index.html
@@ -1,22 +1,49 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Tic-Tac-Toe</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
 </head>
+
 <body>
-<nav>
-    <ul>
-        <li> Tic-Tac-Toe </li>
-    </ul>
-</nav>
+    <nav>
+        <ul>
+            <li> Tic-Tac-Toe </li>
+        </ul>
+    </nav>
+
+    <cdiv class="gameContainer">
+        
+        <div class="container">
+            <div class="box  bt-0 bl-0"> <span class="boxtext ">x</span></div>
+            <div class="box bt-0 "> <span class="boxtext">x</span></div>
+            <div class="box bt-0 br-0"> <span class="boxtext">x</span></div>
+            <div class="box bl-0"> <span class="boxtext">x</span></div>
+            <div class="box "> <span class="boxtext">x</span></div>
+            <div class="box bl-0 br-0"> <span class="boxtext">x</span></div>
+            <div class="box bl-0 bb-0"> <span class="boxtext">x</span></div>
+            <div class="box bb-0"> <span class="boxtext">x</span></div>
+            <div class="box bb-0 br-0"> <span class="boxtext">x</span></div>
+        </div>
+
+        <div class="gameinfo">
+            <h1>welcome to MyTicTacToe</h1>
+            <span class="info">Turn for X </span>
+            <button> Reset </button>
+
+            <div class="imgbox">
+                <img src="dancing-monkey.gif" alt=" Immage not found">
+            </div>
+
+        </div>
+        </div>
 
 
-
-    <script src="script.js"></script>
+        <script src="script.js"></script>
 </body>
+
 </html>
