--- a/index.html
+++ b/index.html
@@ -19,20 +19,20 @@
     <cdiv class="gameContainer">
         
         <div class="container">
-            <div class="box  bt-0 bl-0"> <span class="boxtext ">x</span></div>
-            <div class="box bt-0 "> <span class="boxtext">x</span></div>
-            <div class="box bt-0 br-0"> <span class="boxtext">x</span></div>
-            <div class="box bl-0"> <span class="boxtext">x</span></div>
-            <div class="box "> <span class="boxtext">x</span></div>
-            <div class="box bl-0 br-0"> <span class="boxtext">x</span></div>
-            <div class="box bl-0 bb-0"> <span class="boxtext">x</span></div>
-            <div class="box bb-0"> <span class="boxtext">x</span></div>
-            <div class="box bb-0 br-0"> <span class="boxtext">x</span></div>
+            <div class="box  bt-0 bl-0"> <span class="boxtext ">  </span></div>
+            <div class="box bt-0 "> <span class="boxtext">  </span></div>
+            <div class="box bt-0 br-0"> <span class="boxtext">  </span></div>
+            <div class="box bl-0"> <span class="boxtext">  </span></div>
+            <div class="box "> <span class="boxtext">  </span></div>
+            <div class="box bl-0 br-0"> <span class="boxtext">  </span></div>
+            <div class="box bl-0 bb-0"> <span class="boxtext">  </span></div>
+            <div class="box bb-0"> <span class="boxtext">  </span></div>
+            <div class="box bb-0 br-0"> <span class="boxtext">  </span></div>
         </div>
 
         <div class="gameinfo">
             <h1>welcome to MyTicTacToe</h1>
-            <span class="info">Turn for X </span>
+            <span class="info"> turn for x  </span>
             <button> Reset </button>
 
             <div class="imgbox">
