--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Tic-Tac-Toe</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+
+    <link rel="icon" type="image/x-icon" href="download.jpeg">
+
 </head>
 
 <body>
@@ -33,7 +36,7 @@
         <div class="gameinfo">
             <h1>welcome to MyTicTacToe</h1>
             <span class="info"> turn for x  </span>
-            <button> Reset </button>
+            <button id="reset "> Reset </button>
 
             <div class="imgbox">
                 <img src="dancing-monkey.gif" alt=" Immage not found">
